--- a/package.json
+++ b/package.json
@@ -1,16 +1,23 @@
 {
   "name": "umi-request-cancel",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "description": "umi-request cancel by key",
-  "main": "./lib/index.js",
+  "main": "./lib/umi-request-cancel.umd.js",
+  "module": "./lib/umi-request-cancel.es.js",
+  "exports": {
+    ".": {
+      "import": "./lib/umi-request-cancel.es.js",
+      "require": "./lib/umi-request-cancel.umd.js"
+    }
+  },
   "repository": {
     "type": "git",
     "url": "git@github.com:itkui/umi-request-cancel.git"
   },
   "bugs": "https://github.com/itkui/umi-request-cancel/issues",
   "scripts": {
-    "build": "tsc",
-    "dev": "webpack-dev-server --config ./build/webpack.dev.js",
+    "build": "tsc & vite build",
+    "dev": "vite",
     "dev:server": "cd server && node ./index.js",
     "start": "yarn dev & yarn dev:server"
   },
@@ -24,15 +31,11 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "clean-webpack-plugin": "^4.0.0",
-    "cross-env": "^7.0.3",
-    "html-webpack-plugin": "^5.5.0",
-    "ts-loader": "^9.2.6",
+    "@rollup/plugin-typescript": "^8.3.0",
+    "@types/node": "^17.0.12",
+    "tslib": "^2.3.1",
     "typescript": "^4.5.4",
-    "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.2",
-    "webpack-merge": "^5.8.0"
+    "vite": "^2.7.13"
   },
   "dependencies": {
     "umi-request": "^1.4.0"
