--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "umi-request-cancel",
-  "version": "1.1.0",
+  "version": "1.1.4",
   "description": "umi-request cancel by key",
   "main": "./lib/umi-request-cancel.umd.js",
   "module": "./lib/umi-request-cancel.es.js",
@@ -16,8 +16,8 @@
   },
   "bugs": "https://github.com/itkui/umi-request-cancel/issues",
   "scripts": {
-    "build": "tsc & vite build",
     "dev": "vite",
+    "build": "tsc & vite build",
     "dev:server": "cd server && node ./index.js",
     "start": "yarn dev & yarn dev:server"
   },
@@ -40,5 +40,11 @@
   "dependencies": {
     "umi-request": "^1.4.0"
   },
-  "types": "lib/index.d.ts"
+  "types": "lib/index.d.ts",
+  "files": [
+    "lib/*.js",
+    "lib/*.d.ts",
+    "package.json",
+    "README.md"
+  ]
 }
