--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "umi-request-cancel",
-  "version": "1.1.4",
+  "version": "1.1.6",
   "description": "umi-request cancel by key",
   "main": "./lib/umi-request-cancel.umd.js",
   "module": "./lib/umi-request-cancel.es.js",
@@ -31,19 +31,18 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@rollup/plugin-typescript": "^8.3.0",
     "@types/node": "^17.0.12",
-    "tslib": "^2.3.1",
     "typescript": "^4.5.4",
     "vite": "^2.7.13"
   },
   "dependencies": {
+    "easy-umi-request-cancel": "^1.1.1",
     "umi-request": "^1.4.0"
   },
-  "types": "lib/index.d.ts",
+  "types": "types/umi-request-cancel.d.ts",
   "files": [
-    "lib/*.js",
-    "lib/*.d.ts",
+    "lib/",
+    "types/umi-request-cancel.d.ts",
     "package.json",
     "README.md"
   ]
